...
              android:maxLength="36"
              android:singleLine="true"
              android:text="@{viewModel.inputName}" />
          </com.google.android.material.textfield.TextInputLayout>

          <CheckBox
            android:id="@+id/add_profile_activity_pin_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_profile_pin_checkbox_margin_top"
            android:buttonTint="@color/component_color_shared_checkbox_selector"
            android:minHeight="48dp"
            android:text="@string/add_profile_create_a_3_digit_pin"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
          </androidx.constraintlayout.widget.ConstraintLayout>

          <Button
            android:id="@+id/add_profile_activity_create_button"
            style="@style/StateButtonActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:focusable="true"
            android:background="@{viewModel.isButtonActive() ? @drawable/state_button_primary_background : @drawable/start_button_transparent_background}"
...
